--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
-    "next": "15.4.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
